resolve comment regarding heatbars being truncated

--- a/reactDashboard/src/components/HeatMap/Heatmap.css
+++ b/reactDashboard/src/components/HeatMap/Heatmap.css
@@ -169,7 +169,7 @@
   }
 }
 
-@media all and (max-width: 450px) {
+@media all and (max-width: 550px) {
   .heatmapScale .col {
     padding: 5px 5px;
   }
